# optionpricing

./: .gitignore  CMakeLists.txt  README.md  main.cpp  output.txt  parallel.py  parallel.txt  pcr.cpp  plotoutput.py  requirements.txt  serial.py  serial.txt  setup.py  solve.py  solve2.py  test.py
skunk/: example.py  tridiag.py
src/: binomial.hpp  binomial1d.hpp  binomial1d.hpp.tmp  tridiag.hpp
test/: test_binomial.py  test_fde.py
